--- a/vulkan-game-engine/vulkan-game-engine.vcxproj
+++ b/vulkan-game-engine/vulkan-game-engine.vcxproj
@@ -112,14 +112,14 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>E:\Development\Libraries\glfw-3.3.9\include;E:\Development\Libraries\glm;E:\Development\SDKs\Vulkan\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>E:\Development\Libraries\libpng-1.6.43\install-dir\include;E:\Development\Libraries\zlib-1.3.1\install\include;E:\Development\Libraries\glfw-3.3.9\include;E:\Development\Libraries\glm;E:\Development\SDKs\Vulkan\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>E:\Development\SDKs\Vulkan\Lib;E:\Development\Libraries\glfw-3.3.9\compiled;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>vulkan-1.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>E:\Development\Libraries\libpng-1.6.43\install-dir\lib;E:\Development\Libraries\zlib-1.3.1\install\lib;E:\Development\SDKs\Vulkan\Lib;E:\Development\Libraries\glfw-3.3.9\compiled;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>zlib.lib;libpng16.lib;vulkan-1.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -130,7 +130,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>E:\Development\Libraries\glfw-3.3.9\include;E:\Development\Libraries\glm;E:\Development\SDKs\Vulkan\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>E:\Development\Libraries\libpng-1.6.43\install-dir\include;E:\Development\Libraries\zlib-1.3.1\install\include;E:\Development\Libraries\glfw-3.3.9\include;E:\Development\Libraries\glm;E:\Development\SDKs\Vulkan\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
@@ -138,8 +138,8 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>E:\Development\SDKs\Vulkan\Lib;E:\Development\Libraries\glfw-3.3.9\compiled;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>vulkan-1.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>E:\Development\Libraries\libpng-1.6.43\install-dir\lib;E:\Development\Libraries\zlib-1.3.1\install\lib;E:\Development\SDKs\Vulkan\Lib;E:\Development\Libraries\glfw-3.3.9\compiled;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>vulkan-1.lib;glfw3.lib;zlib.lib;libpng16.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -148,9 +148,11 @@
     <ClCompile Include="GraphicsPipeline.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Mesh.cpp" />
+    <ClCompile Include="PNGReader.cpp" />
     <ClCompile Include="QueueFamily.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="SwapChain.cpp" />
+    <ClCompile Include="Texture.cpp" />
     <ClCompile Include="Vertex.cpp" />
     <ClCompile Include="VulkanClient.cpp" />
     <ClCompile Include="VulkanDevice.cpp" />
@@ -162,9 +164,11 @@
     <ClInclude Include="CommandPool.h" />
     <ClInclude Include="GraphicsPipeline.h" />
     <ClInclude Include="Mesh.h" />
+    <ClInclude Include="PNGReader.h" />
     <ClInclude Include="QueueFamily.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="SwapChain.h" />
+    <ClInclude Include="Texture.h" />
     <ClInclude Include="Vertex.h" />
     <ClInclude Include="VulkanClient.h" />
     <ClInclude Include="VulkanDevice.h" />
