--- a/vulkan-game-engine/vulkan-game-engine.vcxproj.filters
+++ b/vulkan-game-engine/vulkan-game-engine.vcxproj.filters
@@ -26,6 +26,12 @@
     <Filter Include="Meshes">
       <UniqueIdentifier>{b94e4185-f3d3-4cb9-8a2f-d2be9a6b0be3}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Shading">
+      <UniqueIdentifier>{9fca90ab-116d-44b6-b5db-8663daee7bbd}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="IO">
+      <UniqueIdentifier>{6d8bdd21-2021-488a-9a05-2e6a8867cc82}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -55,9 +61,6 @@
     <ClCompile Include="Buffer.cpp">
       <Filter>VulkanDevice</Filter>
     </ClCompile>
-    <ClCompile Include="Shader.cpp">
-      <Filter>Meshes</Filter>
-    </ClCompile>
     <ClCompile Include="CommandPool.cpp">
       <Filter>GraphicsPipeline</Filter>
     </ClCompile>
@@ -66,6 +69,15 @@
     </ClCompile>
     <ClCompile Include="SwapChain.cpp">
       <Filter>GraphicsPipeline</Filter>
+    </ClCompile>
+    <ClCompile Include="Shader.cpp">
+      <Filter>Shading</Filter>
+    </ClCompile>
+    <ClCompile Include="Texture.cpp">
+      <Filter>Shading</Filter>
+    </ClCompile>
+    <ClCompile Include="PNGReader.cpp">
+      <Filter>IO</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -93,9 +105,6 @@
     <ClInclude Include="Buffer.h">
       <Filter>VulkanDevice</Filter>
     </ClInclude>
-    <ClInclude Include="Shader.h">
-      <Filter>Meshes</Filter>
-    </ClInclude>
     <ClInclude Include="CommandPool.h">
       <Filter>GraphicsPipeline</Filter>
     </ClInclude>
@@ -104,6 +113,15 @@
     </ClInclude>
     <ClInclude Include="SwapChain.h">
       <Filter>GraphicsPipeline</Filter>
+    </ClInclude>
+    <ClInclude Include="Shader.h">
+      <Filter>Shading</Filter>
+    </ClInclude>
+    <ClInclude Include="Texture.h">
+      <Filter>Shading</Filter>
+    </ClInclude>
+    <ClInclude Include="PNGReader.h">
+      <Filter>IO</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
